--- a/templates/categories/list.html
+++ b/templates/categories/list.html
@@ -4,4 +4,10 @@
 
     <h1>Categories</h1>
 
+    <div class="list-group">
+        {% for item in category_entities%}
+            <a href="{{ item.id }}" class="list-group-item list-group-item-action">{{ item.title }}</a>
+        {% endfor %}
+    </div>
+
 {% endblock %}
