--- a/templates/products/add.html
+++ b/templates/products/add.html
@@ -2,13 +2,10 @@
 
 {% block content %}
 
-
 <form method="post">
     {% csrf_token %}
-    <legend>Add New Category</legend>
 
-
-    {% for field in form %}
+    {% for field in form.visible_fields %}
     <fieldset>
         <div class="mb-3">
             <label class="form-label">{{ field.label_tag }}</label>
