--- a/templates/products/add.html
+++ b/templates/products/add.html
@@ -1,4 +1,4 @@
-{% include 'layout/header.html' %}
+{% include 'layout/base.html' %}
 
 {% block content %}
 
@@ -16,7 +16,11 @@
         </div>
     </fieldset>
     {% endfor %}
-    <button type="submit" class="btn btn-primary">Submit</button>
+    {% if edit %}
+        <button type="submit" class="btn btn-warning">Edit</button>
+    {% else %}
+        <button type="submit" class="btn btn-primary">Submit</button>
+    {% endif %}
 </form>
 
 {% endblock %}
