--- a/templates/layout/topnav.html
+++ b/templates/layout/topnav.html
@@ -6,6 +6,6 @@
     <a class="nav-link text-light" href="{% url 'logout' %}">Logout</a>
     {% else %}
     <a class="nav-link text-light" href="{% url 'login' %}">Login</a>
-    <a class="nav-link text-light" href="{% url 'logout' %}">Register</a>
+    <a class="nav-link text-light" href="{% url 'register' %}">Register</a>
     {% endif %}
 </nav>
