--- a/templates/products/show.html
+++ b/templates/products/show.html
@@ -12,4 +12,7 @@
     <a class="btn btn-outline-secondary" href="{{ back_url }}">Back</a>
     <a class="btn btn-outline-warning" href="./edit/">Edit</a>
 </div>
+
+{% include 'comments/add.html' with comment_form=form %}
+
 {% endblock %}
