--- a/templates/products/show.html
+++ b/templates/products/show.html
@@ -12,7 +12,7 @@
     <a class="btn btn-outline-secondary" href="{{ back_url }}">Back</a>
     <a class="btn btn-outline-warning" href="./edit/">Edit</a>
 </div>
-
+{% include 'comments/show.html' with comments=product_entities.comments.all %}
 {% include 'comments/add.html' with comment_form=form %}
 
 {% endblock %}
