--- a/templates/gallery/index.html
+++ b/templates/gallery/index.html
@@ -8,5 +8,12 @@
 </div>
 {% endif %}
 
-<h2>Gallery</h2>
+{% for item in gallery_entities %}
+<div>
+    {% load static %}
+    <img src="{% get_media_prefix %}{{ item.file }}" alt="">
+    {{ item.created_at|date:'d-m-Y H:i' }}
+</div>
+{% endfor %}
+
 {% endblock %}
