--- a/templates/products/show.html
+++ b/templates/products/show.html
@@ -13,6 +13,6 @@
     <a class="btn btn-outline-warning" href="./edit/">Edit</a>
 </div>
 {% include 'comments/show.html' with comments=product_entities.comments.all %}
-{% include 'comments/add.html' with comment_form=form %}
+{% include 'comments/store.html' with comment_form=form %}
 
 {% endblock %}
