--- a/templates/layout/topnav.html
+++ b/templates/layout/topnav.html
@@ -2,6 +2,7 @@
     <a class="nav-link text-light" href="/">Home Page</a>
     <a class="nav-link text-light" href="/categories/">Categories</a>
     <a class="nav-link text-light" href="/products/">Products</a>
+    <a class="nav-link text-light" href="/posts/">Posts</a>
     <a class="nav-link text-light" href="/gallery/">Gallery</a>
     {% if user.is_authenticated %}
     <a class="nav-link text-light" href="{% url 'logout' %}">Logout</a>
